Stylesview: Fix dark mode background and border
Before this commit there were
- Odd border artifact
- The styles previews were being rendered and looked like detached
rectangles (with different background than the background of the main
container)

This commit fixes those while making use of css vars. Additionally,
decrease the brightness of the whole stylesview to 90% (100% on hover
state) so the user doesn't have a very bright component always up
there.

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -368,10 +368,15 @@ button.ui-tab.notebookbar {
 	width: 530px;
 	overflow: auto;
 	padding: 0px;
-	border: 1px solid var(--color-border);
+	border: 1px solid var(--color-stylesview-border);
 	border-radius: var(--border-radius);
 	border-collapse: separate; /*To use box-shadow in Internet Explorer 9 or later*/
 	scrollbar-width: none;
+	background-color: var(--color-stylesview-background);
+	filter: brightness(var(--brightness-stylesview));
+}
+#stylesview:hover {
+	filter: none;
 }
 
 #stylesview::-webkit-scrollbar {
